// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atomic 1`] = `
".a {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

.b {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

@media (min-width: 640px) {
  .c {
    border-width: 1px;
  }
  .d {
    border-radius: 0.25rem;
  }
  .e {
    background-color: rgba(147, 197, 253, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
}"
`;

exports[`atomic with atomicNamer 1`] = `
".bg\\\\.blue\\\\.500 {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

.text\\\\.lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

@media (min-width: 640px) {
  .border {
    border-width: 1px;
  }
  .rounded {
    border-radius: 0.25rem;
  }
  .bg\\\\.blue\\\\.300 {
    background-color: rgba(147, 197, 253, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
}"
`;

exports[`atomic with hashNamer 1`] = `
".w-ixsi2d {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

.w-fhiqyx {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

@media (min-width: 640px) {
  .w-4mwz7n {
    border-width: 1px;
  }
  .w-3cecw {
    border-radius: 0.25rem;
  }
  .w-1ho46uf {
    background-color: rgba(147, 197, 253, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
}"
`;

exports[`atomic with nested variant 1`] = `
".a {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

.b {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.f:hover {
  background-color: rgba(253, 224, 71, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

@media (min-width: 640px) {
  .c {
    border-width: 1px;
  }
  .d {
    border-radius: 0.25rem;
  }
  .e {
    background-color: rgba(147, 197, 253, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
  .g:hover {
    background-color: rgba(37, 99, 235, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
  @media (prefers-color-scheme: dark) {
    .h:hover {
      background-color: rgba(30, 64, 175, var(--w-bg-opacity));
      --w-bg-opacity: 1;
    }
  }
}"
`;

exports[`atomic with nested variant and atomicNamer 1`] = `
".bg\\\\.blue\\\\.500 {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

.text\\\\.lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.bg\\\\.yellow\\\\.300:hover {
  background-color: rgba(253, 224, 71, var(--w-bg-opacity));
  --w-bg-opacity: 1;
}

@media (min-width: 640px) {
  .border {
    border-width: 1px;
  }
  .rounded {
    border-radius: 0.25rem;
  }
  .bg\\\\.blue\\\\.300 {
    background-color: rgba(147, 197, 253, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
  .bg\\\\.blue\\\\.600:hover {
    background-color: rgba(37, 99, 235, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
  @media (prefers-color-scheme: dark) {
    .bg\\\\.blue\\\\.800:hover {
      background-color: rgba(30, 64, 175, var(--w-bg-opacity));
      --w-bg-opacity: 1;
    }
  }
}"
`;

exports[`build font-face 1`] = `
"@font-face {
  font-family: monospace;
  src: url(webfont.eot);
}"
`;

exports[`build font-face 2`] = `
"@font-face {
  font-family: MyWebFont;
  src: url(webfont.eot);
}

@font-face {
  font-family: MySecondFont;
  src: url(webfont2.eot);
}"
`;

exports[`build global media rules 1`] = `
"@namespace url(XML-namespace-URL);

@charset \\"utf-8\\";

@import url(http://mysite.com/custom.css);

@layer utilities;

@layer utilities {
  .padding-sm {
    padding: 0.5rem;
  }
  .padding-lg {
    padding: 0.8rem;
  }
}"
`;

exports[`build keyframes 1`] = `
"@-webkit-keyframes {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes slideRight {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.container {
  animation-name: slideRight;
}"
`;

exports[`build media queries 1`] = `
"@media screen and (min-width: 900px) {
  article {
    padding: 1rem 3rem;
  }
}

@supports (display: flex) {
  @media screen and (min-width: 900px) {
    article {
      display: flex;
    }
  }
}

@media print {
  @font-face {
    font-family: MySecondFont;
    src: url(webfont2.eot);
  }
}

@media (prefers-color-scheme: dark) {
  @media (min-width: 900px) {
    article {
      display: block;
    }
  }
}"
`;

exports[`build nested css 1`] = `
".flex .b {
  font-size: large;
}

.flex {
  display: flex;
  display: -ms-flex;
}

.flex .c {
  font-size: 1rem;
}

@media print {
  @font-face {
    font-family: monospace;
  }
}

@media (min-width: 900px) {
  .flex .abc {
    font-size: 2rem;
  }
  .flex.def {
    font-size: 3rem;
  }
}

@supports (display: flex) {
  .flex {
    font-size: 4rem;
  }
  @media (min-width: 800px) {
    .flex body {
      background: red;
    }
    .flex > p {
      padding: 1rem;
    }
  }
}"
`;

exports[`build same css property 1`] = `
".flex {
  display: flex;
  display: -ms-flex;
}"
`;

exports[`bundle with nested media 1`] = `
Map {
  "&:hover" => Object {
    "@media (hover: hover)": Object {
      "@media (color)": Object {
        "borderColor": "#036",
      },
      "border": "2px solid black",
    },
  },
}
`;

exports[`unify with utilities 1`] = `
".test {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

@media (min-width: 640px) {
  .test {
    border-width: 1px;
    border-radius: 0.25rem;
    background-color: rgba(96, 165, 250, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
}"
`;

exports[`unify with utilities 2`] = `
".test2 {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  font-size: 1.125rem;
  line-height: 1.75rem;
  border-radius: 0.375rem;
  border-width: 2px;
}

@media (min-width: 640px) {
  .test2 {
    border-width: 1px;
    border-radius: 0.25rem;
    background-color: rgba(96, 165, 250, var(--w-bg-opacity));
    --w-bg-opacity: 1;
  }
}"
`;

exports[`unify with utility object 1`] = `
".test {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.button {
  background-color: rgba(244, 63, 94, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  border-radius: 0.25rem;
  border-width: 1px;
}"
`;

exports[`unify with utility object: a 1`] = `
".test {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.button {
  background-color: rgba(244, 63, 94, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  border-radius: 0.25rem;
  border-width: 1px;
}

p {
  font-size: 1.125rem;
  line-height: 1.75rem;
}"
`;

exports[`unify with utility object: a 2`] = `
".test {
  background-color: rgba(59, 130, 246, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.button {
  background-color: rgba(244, 63, 94, var(--w-bg-opacity));
  --w-bg-opacity: 1;
  border-radius: 0.25rem;
  border-width: 1px;
}

p {
  font-size: 1.125rem;
  line-height: 1.75rem;
}"
`;
